# k8s-sandbox

./: Makefile  README.md  k8s_sandbox.server.frontend_settings.cfg  setup.cfg
src/k8s_sandbox/: mylog.py
src/k8s_sandbox/cmd/: init.py  log.py
src/k8s_sandbox/server/: __init__.py  settings.py  views.py
