[metadata]
name = k8s-sandbox
version = 0.0.1

[options]
packages = find:
package_dir = = src
install_requires =
    flask
    requests
    kubernetes
    watchdog

[options.entry_points]
console_scripts =
    k8s-log = k8s_sandbox.cmd.log:main
    k8s-init = k8s_sandbox.cmd.init:main
    k8s-frontend = k8s_sandbox.server:frontend
    k8s-backend = k8s_sandbox.server:backend

[options.packages.find]
where = src
